--- a/Aplikacija/Studentska služba/Studentska služba/Views/Podaci/Departmani/DepartmanList.xaml
+++ b/Aplikacija/Studentska služba/Studentska služba/Views/Podaci/Departmani/DepartmanList.xaml
@@ -14,6 +14,8 @@
         <controls:DataGrid Name="dataGrid"
                                IsReadOnly="True"
                                CanUserSortColumns="True"
+                               AlternatingRowBackground="WhiteSmoke"
+                               SelectionMode="Single"
                                Sorting="DataGrid_Sorting"
                                ItemsSource="{x:Bind vm.ItemList, Mode=TwoWay}"
                                AutoGenerateColumns="False"
