--- a/Aplikacija/Studentska služba/Studentska služba/Views/Podaci/Profesori/ProfesorDetails.xaml
+++ b/Aplikacija/Studentska služba/Studentska služba/Views/Podaci/Profesori/ProfesorDetails.xaml
@@ -7,6 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:local1="using:Studentska_služba"
+    xmlns:helpers="using:Studentska_služba.Helpers"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -27,13 +28,13 @@
                             HorizontalSpacing="10"
                             Orientation="Horizontal">
 
-            <TextBox Text="{x:Bind Profesor.Ime, Mode=TwoWay, FallbackValue=''}"  
+            <helpers:LetterOnlyTextBox Text="{x:Bind Profesor.Ime, Mode=TwoWay, FallbackValue=''}"  
                          x:Uid="/Podaci/Ime"
                          Style="{StaticResource DetailsElement}"/>
-            <TextBox Text="{x:Bind Profesor.Prezime, Mode=TwoWay, FallbackValue=''}" 
+            <helpers:LetterOnlyTextBox Text="{x:Bind Profesor.Prezime, Mode=TwoWay, FallbackValue=''}" 
                          x:Uid="/Podaci/Prezime"
                          Style="{StaticResource DetailsElement}" />
-            <TextBox Text="{x:Bind Profesor.Jmbg, Mode=TwoWay, FallbackValue=''}"
+            <helpers:IntegerTextBox Text="{x:Bind Profesor.Jmbg, Mode=TwoWay, FallbackValue=''}"
                          x:Uid="/Podaci/JMBG"
                          InputScope="Number"
                          Style="{StaticResource DetailsElement}" />
